fix: CORS 설정 수정 및 허용 헤더 확장